--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@11ty/eleventy": "^2.0.1",
+    "@11ty/eleventy-navigation": "^0.3.5",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.3",
     "@tailwindcss/typography": "^0.5.0",
     "alpinejs": "^3.7.1",
@@ -24,6 +25,7 @@
     "tailwindcss": "^3.0.13"
   },
   "dependencies": {
+    "@11ty/eleventy-img": "^4.0.2",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.5"
   }
